# Stopwatch

./: .gitignore  CMakeLists.txt  README.md  stopwatchConfig.hpp.in
include/stopwatch/: stopwatch.hpp
src/: stopwatch.cpp
